添加前端所需接口